add header and footer and index template page

--- a/webserver/views/footer.ejs
+++ b/webserver/views/footer.ejs
@@ -1,3 +1,22 @@
-<footer>footer</footer>
+</main>
+<footer class="page-footer py-3 border-top">
+	<div class="container my-4">
+		<div class="links"><a href="news">News</a><a href="contact">Contact</a><a href="login">Login</a></div>
+		<div class="social-icons"><a class="me-3" href="#"><i class="icon ion-social-facebook"></i></a><a class="me-3" href="#"><i class="icon ion-social-instagram-outline"></i></a><a class="me-3" href="#"><i class="icon ion-social-twitter"></i></a></div>
+	</div>
+</footer>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="assets/js/pikaday.min.js"></script>
+<script src="assets/js/theme.js"></script>
+<!-- Include the Quill library -->
+<script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
+
+<!-- Initialize Quill editor -->
+<script>
+const quill = new Quill('#editor', {
+	theme: 'snow'
+});
+</script>
 </body>
+
 </html>
