--- a/webserver/views/header.ejs
+++ b/webserver/views/header.ejs
@@ -1,9 +1,39 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Webserver</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
-  </head>
-  <body>
-    <h1>header</h1>
-</html>
+<html data-bs-theme="light">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Verified News</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;display=swap">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/pikaday.min.css">
+	<link href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.snow.css" rel="stylesheet" />
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark">
+        <div class="container"><a class="navbar-brand logo" href="\"><img src="assets/img/template/logo_200_sq.png" class="pe-1" height="42px">VERIFIED NEWS</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index">News</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about-us">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="our-team">Our Team</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="contact">Contact</a></li>
+					<li class="nav-item"><button type="button" class="btn btn-primary">Login</button></li>
+					<div class="dropdown">
+						<button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+						  Journalist Actions
+						</button>
+						<ul class="dropdown-menu">
+						  <li><a class="dropdown-item" href="submit">Submit Article</a></li>
+						  <li><a class="dropdown-item" href="review">Review Articles</a></li>
+						  <li><a class="dropdown-item" href="#">Log Out</a></li>
+						</ul>
+					  </div>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <main class="page">
