--- a/webserver/views/footer.ejs
+++ b/webserver/views/footer.ejs
@@ -9,6 +9,7 @@
 <script src="assets/js/pikaday.min.js"></script>
 <script src="assets/js/theme.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
+<script src="assets/js/submit.js"></script>
 
 </body>
 
