clean code, add human check on form submission

--- a/webserver/views/submit.ejs
+++ b/webserver/views/submit.ejs
@@ -26,6 +26,14 @@
                     <p><br /></p>
                 </div>
             </div>
+            <div class="mb-3">
+                <label for="humanCheck" class="form-label" id="humanCheckLabel"></label>
+                <input type="number" class="form-control" id="humanCheck" name="humanCheck" required>
+                <div class="invalid-feedback">
+                    Please verify you are a human by answering correctly.
+                </div>
+            </div>
+            <input type="hidden" id="humanCheckAnswer" name="humanCheckAnswer">
             <div class="mb-3 mt-4">
                 <button class="btn btn-primary btn-lg d-block w-100" type="submit">
                     Submit Form
@@ -34,3 +42,6 @@
         </form>
     </div>
 </section>
+
+<script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
+<script type="module" src="assets/js/forms/submit_contact.js"></script>
