--- a/webserver/views/article_submit.ejs
+++ b/webserver/views/article_submit.ejs
@@ -3,7 +3,7 @@
         <div class="heading">
             <h2>Submit Article</h2>
         </div>
-        <form id="submit-form" class="shadow-lg" data-bs-theme="light" action="/submit-form" method="POST"
+        <form id="submit-article" class="shadow-lg" data-bs-theme="light" action="/submit-article" method="POST"
             enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="headline">Article Headline</label>
@@ -44,4 +44,4 @@
 </section>
 
 <script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
-<script type="module" src="assets/js/forms/submit_contact.js"></script>
+<script type="module" src="assets/js/forms/article_submit.js"></script>
