--- a/webserver/views/footer.ejs
+++ b/webserver/views/footer.ejs
@@ -2,7 +2,9 @@
 <footer class="page-footer py-3 border-top">
 	<div class="container my-4">
 		<div class="links"><a href="news">News</a><a href="contact">Contact</a><a href="login">Login</a></div>
-		<div class="social-icons"><a class="me-3" href="#"><i class="icon ion-social-facebook"></i></a><a class="me-3" href="#"><i class="icon ion-social-instagram-outline"></i></a><a class="me-3" href="#"><i class="icon ion-social-twitter"></i></a></div>
+		<div class="social-icons"><a class="me-3" href="#"><i class="icon ion-social-facebook"></i></a><a class="me-3"
+				href="#"><i class="icon ion-social-instagram-outline"></i></a><a class="me-3" href="#"><i
+					class="icon ion-social-twitter"></i></a></div>
 	</div>
 </footer>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
