add web3auth basic functionality

--- a/webserver/views/footer.ejs
+++ b/webserver/views/footer.ejs
@@ -7,9 +7,9 @@
 					class="icon ion-social-twitter"></i></a></div>
 	</div>
 </footer>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/js/pikaday.min.js"></script>
-<script src="assets/js/theme.js"></script>
+<script src="/assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="/assets/js/pikaday.min.js"></script>
+<script src="/assets/js/theme.js"></script>
 </body>
 
 </html>
