--- a/webserver/views/web3.ejs
+++ b/webserver/views/web3.ejs
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html>
 
-<head>
-  <title>Web3Auth Getting Started</title>
-  <meta charset="UTF-8" />
-  <link rel="stylesheet" href="style.css" />
-</head>
-
-<body>
   <div class="container">
+    <h1 class="title">
+      <a target="_blank" href="https://web3auth.io/docs/sdk/pnp/web/modal">Web3Auth</a> & JS Ethereum
+      Example
+    </h1>
     <!-- Logged In -->
     <div class="grid btn-logged-in">
       <button id="get-user-info" class="btn">Get User Info</button>
@@ -16,7 +11,7 @@
       <button id="get-balance" class="btn">Get Balance</button>
       <button id="sign-message" class="btn">Sign Message</button>
       <button id="show-wallet" class="btn">Show Wallet</button>
-
+      
       <button id="logout" class="btn">Logout</button>
       <div class="console" id="console">
         <p id="code" class="code"></p>
@@ -27,20 +22,24 @@
     <div class="grid btn-logged-out">
       <button id="login" class="btn">Login</button>
     </div>
+    <footer class="footer">
+      <a href="https://github.com/Web3Auth/web3auth-pnp-examples/tree/main/web-modal-sdk/quick-starts/vanillajs-modal-quick-start"
+        target="_blank" rel="noopener noreferrer">
+        Source code
+      </a>
+      <a href="https://vercel.com/new/clone?repository-url=https%3A%2F%2Fgithub.com%2FWeb3Auth%2Fweb3auth-pnp-examples%2Ftree%2Fmain%2Fweb-modal-sdk%2Fquick-starts%2Fvanillajs-modal-quick-start&project-name=w3a-vanillajs-modal&repository-name=w3a-vanillajs-modal">
+        <img src="https://vercel.com/button" alt="Deploy with Vercel" />
+      </a>
+    </footer>
   </div>
 
-
+  
   <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
   <script src="https://unpkg.com/base64-js@1.5.1/base64js.min.js"></script>
-
-  <!--IMP START - Quick Start-->
+  
   <script src="https://cdn.jsdelivr.net/npm/@web3auth/modal"></script>
   <script src="https://cdn.jsdelivr.net/npm/@web3auth/wallet-services-plugin"></script>
   <script src="https://cdn.jsdelivr.net/npm/@web3auth/ethereum-provider"></script>
-  <!--IMP END - Quick Start-->
   <script src="https://cdn.jsdelivr.net/npm/web3@4.1.1/dist/web3.min.js"></script>
-
-  <script src="script.js?as"></script>
-</body>
-
-</html>
+  
+  <script src="/web3auth/script.js?as"></script>
