--- a/webserver/views/footer.ejs
+++ b/webserver/views/footer.ejs
@@ -10,6 +10,15 @@
 <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="/assets/js/pikaday.min.js"></script>
 <script src="/assets/js/theme.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
+<script src="https://unpkg.com/base64-js@1.5.1/base64js.min.js"></script>
+
+<!-- web3auth -->
+<script src="https://cdn.jsdelivr.net/npm/@web3auth/modal"></script>
+<script src="https://cdn.jsdelivr.net/npm/@web3auth/wallet-services-plugin"></script>
+<script src="https://cdn.jsdelivr.net/npm/@web3auth/ethereum-provider"></script>
+<script src="https://cdn.jsdelivr.net/npm/web3@4.1.1/dist/web3.min.js"></script>
+<script type="module" src="web3auth/script.js"></script>
 </body>
 
 </html>
