--- a/webserver/views/article_submit.ejs
+++ b/webserver/views/article_submit.ejs
@@ -3,8 +3,7 @@
         <div class="heading">
             <h2>Submit Article</h2>
         </div>
-        <form id="submit-article" class="shadow-lg" data-bs-theme="light" action="/submit-article" method="POST"
-            enctype="multipart/form-data">
+        <form id="submit-article" class="shadow-lg" data-bs-theme="light" action="/submit-article" method="POST" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="headline">Article headline</label>
                 <input class="form-control item" type="text" id="headline" name="headline" required />
@@ -33,6 +32,7 @@
             <div class="mb-3 mt-4">
                 <button class="btn btn-primary btn-lg d-block w-100" type="submit">
                     Submit Article
+                    <span id="waiting-icon" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="display: none;"></span>
                 </button>
             </div>
         </form>
