--- a/webserver/views/profile.ejs
+++ b/webserver/views/profile.ejs
@@ -1,51 +1,69 @@
-<section class="clean-block about-us">
-    <div class="row" style="margin-right: 0px;margin-left: 0px;">
-        <div class="col text-center">
-            <h2 class="text-info">User Profile</h2>
-        </div>
-    </div>
-    <div class="row justify-content-center" style="margin-right: 0px;margin-left: 0px;">
-        <div class="col-sm-6 col-lg-4" style="padding-right: 0px;padding-left: 0px;">
-            <div class="card clean-card text-center"><img class="card-img-top w-100 d-block"
-                    src="/assets/img/logoComedor/avatar1.jpg">
-                <div class="card-body info">
-                    <div class="row" style="margin-top: -24px;">
-                        <div class="col-md-12" style="margin-top: 22px;">
-                            <div class="row">
-                                <div class="col">
-                                    <p class="labels"><strong>Full Name</strong></p>
-                                </div>
-                                <div class="col">
-                                    <p class="labels"></p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <p class="labels"><strong>Email</strong></p>
-                                </div>
-                                <div class="col">
-                                    <p class="labels"></p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <p class="labels"><strong>Wallet Address</strong></p>
-                                </div>
-                                <div class="col">
-                                    <p class="labels"></p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <p class="labels"><strong>TokenID</strong></p>
-                                </div>
-                                <div class="col">
-                                    <p class="labels"></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<style>
+	.custom-handling {
+		padding-top: 80px;
+	}
+
+	/* Add padding or margin to push down the content */
+	.profile-container {
+		margin-top: 100px; /* Adjust this value as needed */
+	}
+</style>
+
+<body>
+	<div class="container profile-container custom-handling">
+		<div class="main-body">
+			<div class="row gutters-sm">
+				<div class="col-md-4 mb-3">
+					<div class="card">
+						<div class="card-body">
+							<div class="d-flex flex-column align-items-center text-center">
+								<img id="profile-picture" src="" class="rounded-circle" width="150">
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-8">
+					<div class="card mb-3">
+						<div class="card-body">
+							<div class="row">
+								<div class="col-sm-3">
+									<h6 class="mb-0">Full Name</h6>
+								</div>
+								<div class="col-sm-9 text-secondary" id="profile-name">
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col-sm-3">
+									<h6 class="mb-0">Email</h6>
+								</div>
+								<div class="col-sm-9 text-secondary" id="email">
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col-sm-3">
+									<h6 class="mb-0">Wallet Address</h6>
+								</div>
+								<div class="col-sm-9 text-secondary" id="wallet-address">
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col-sm-3">
+									<h6 class="mb-0">ETH Balance</h6>
+								</div>
+								<div class="col-sm-9 text-secondary" id="eth-balance">
+								</div>
+							</div>
+							<hr>
+						<div class="grid btn-logged-in">
+							<button id="show-wallet" class="btn btn-primary">Show Wallet</button>
+						</div>
+					</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script type="module" src="assets/web3auth/profile.js"></script>
