--- a/webserver/views/profile.ejs
+++ b/webserver/views/profile.ejs
@@ -1,16 +1,11 @@
 <style>
-	.custom-handling {
-		padding-top: 80px;
-	}
-
-	/* Add padding or margin to push down the content */
 	.profile-container {
-		margin-top: 100px; /* Adjust this value as needed */
+		margin-top: 25px;
 	}
 </style>
 
 <body>
-	<div class="container profile-container custom-handling">
+	<div class="container profile-container">
 		<div class="main-body">
 			<div class="row gutters-sm">
 				<div class="col-md-4 mb-3">
