New apply to join button

--- a/webserver/views/footer.ejs
+++ b/webserver/views/footer.ejs
@@ -1,5 +1,9 @@
 </main>
 <footer class="page-footer py-3 border-top">
+	<div class="d-flex justify-content-center align-items-center content">
+		<h3>Are you a journalist?</h3>
+		<a href="apply" class="btn btn-outline-primary btn-apply" type="button">Apply to join</a>
+	</div>
 	<div class="container my-4">
 		<div class="links"><a href="news">News</a><a href="contact">Contact</a><a href="login">Login</a></div>
 		<div class="social-icons"><a class="me-3" href="#"><i class="icon ion-social-facebook"></i></a><a class="me-3"
