--- a/webserver/views/header.ejs
+++ b/webserver/views/header.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/assets/css/Ludens-Users---3-Profile.css">
     <link href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.snow.css" rel="stylesheet" />
     <link rel="stylesheet" href="/web3auth/style.css" />
+    <link rel="stylesheet" href="/assets/css/custom-styles.css" />
 </head>
 
 <body>
