fix js bugs for profile, clean code for profile

--- a/webserver/views/profile.ejs
+++ b/webserver/views/profile.ejs
@@ -61,4 +61,4 @@
 			</div>
 		</div>
 	</div>
-	<script type="module" src="assets/web3auth/profile.js"></script>
+	<script type="module" src="/web3auth/profile.js"></script>
