--- a/webserver/views/index.ejs
+++ b/webserver/views/index.ejs
@@ -18,40 +18,9 @@
         <div class="heading">
             <h3>Top Verified News</h3>
         </div>
-        <div class="row">
-            <div class="col-md-6 col-lg-6">
-                <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="/assets/img/nature/image1.jpg" alt="Card Image"></a>
-                    <div class="card-body">
-                        <h3><a href="#">Lorem Ipsum</a></h3>
-                        <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-6">
-                <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="/assets/img/nature/image2.jpg" alt="Card Image"></a>
-                    <div class="card-body">
-                        <h3><a href="#">Lorem Ipsum</a></h3>
-                        <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-6">
-                <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="/assets/img/nature/image4.jpg" alt="Card Image"></a>
-                    <div class="card-body">
-                        <h3><a href="#">Lorem Ipsum</a></h3>
-                        <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-6">
-                <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="/assets/img/nature/image5.jpg" alt="Card Image"></a>
-                    <div class="card-body">
-                        <h3><a href="#">Lorem Ipsum</a></h3>
-                        <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+		<div class="col-md-6 col-lg-6"" id="article-container">
+			<!-- Articles will be inserted here dynamically -->
+		</div>
     </div>
 </section>
 
@@ -62,3 +31,4 @@
 		</div>
 	</div>
 </section>
+<script type="module" src="/assets/js/forms/article_index.js"></script>
