--- a/webserver/views/index.ejs
+++ b/webserver/views/index.ejs
@@ -18,9 +18,9 @@
         <div class="heading">
             <h3>Top Verified News</h3>
         </div>
-		<div class="col-md-6 col-lg-6"" id="article-container">
-			<!-- Articles will be inserted here dynamically -->
-		</div>
+        <div class="row" id="article-container">
+            <!-- Articles will be inserted here dynamically -->
+        </div>
     </div>
 </section>
 
