--- a/webserver/views/header.ejs
+++ b/webserver/views/header.ejs
@@ -12,6 +12,7 @@
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="assets/css/Ludens-Users---3-Profile.css">
     <link href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.snow.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/custom-styles.css">
 </head>
 
 <body>
