--- a/webserver/views/footer.ejs
+++ b/webserver/views/footer.ejs
@@ -24,7 +24,7 @@
 <script src="https://cdn.jsdelivr.net/npm/web3@4.1.1/dist/web3.min.js"></script>
 <script type="module" src="/web3auth/script.js"></script>
 
-<script>
+<!-- <script>
 	document.getElementById('thumbs-up').addEventListener('click', function () {
 	  this.classList.toggle('active');
 	  document.getElementById('thumbs-down').classList.remove('active');
@@ -34,7 +34,7 @@
 	  this.classList.toggle('active');
 	  document.getElementById('thumbs-up').classList.remove('active');
 	});
-  </script>
+  </script> -->
   
 
 
