make basic testing, submiting first contract

--- a/webserver/views/index.ejs
+++ b/webserver/views/index.ejs
@@ -31,5 +31,5 @@
 		</div>
 	</div>
 </section>
-<script type="module" src="/assets/js/forms/article_index.js"></script>
+<script type="module" src="/forms/article_index.js"></script>
 <script type="module" src="/contract/print_index.js"></script>
