--- a/webserver/views/index.ejs
+++ b/webserver/views/index.ejs
@@ -7,7 +7,7 @@
             </div>
             <div class="col-md-6 col-lg-8 p-6">
                 <h3>Verified News</h3>
-                <h5 class="text-muted fw-light" >Verified News delivers reliable journalism with every article undergoing rigorous fact-checking and peer-review. Articles are stored on a blockchain for transparency and integrity, ensuring an immutable record of our commitment to truth.</h5>
+                <h5 class="text-muted fw-light" >Verified News delivers reliable journalism with every article undergoing rigorous fact-checking and peer-review. Articles are stored on a blockchain for transparency and integrity, ensuring an immutable record of our commitment to truth. We use Filecoin and Lighthouse to store the articles and smart contracts to seal them, guaranteeing their authenticity and permanence. Additionally, we employ Web3Auth for secure login and wallet management, enhancing user security and ease of access.</h5>
             </div>
         </div>
     </div>
