review page is now working

--- a/webserver/views/review.ejs
+++ b/webserver/views/review.ejs
@@ -1,22 +1,8 @@
-<section class="portfolio-block">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-lg-4 p-6">
-                <div class="card border-0 p-6 me-6"><img class="card-img" src="/assets/img/template/earth.jpg" alt="Verified news">
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-8 p-6">
-                <h3>Verified News</h3>
-                <h5 class="text-muted fw-light" >Verified News delivers reliable journalism with every article undergoing rigorous fact-checking and peer-review. Articles are stored on a blockchain for transparency and integrity, ensuring an immutable record of our commitment to truth. We use Filecoin and Lighthouse to store the articles and smart contracts to seal them, guaranteeing their authenticity and permanence. Additionally, we employ Web3Auth for secure login and wallet management, enhancing user security and ease of access.</h5>
-            </div>
-        </div>
-    </div>
-</section>
 
 <section class="portfolio-block projects-cards">
     <div class="container">
         <div class="heading">
-            <h3>Top Verified News</h3>
+            <h3>Articles waiting to be evaluated</h3>
         </div>
         <div class="row" id="article-container">
             <!-- Articles will be inserted here dynamically -->
@@ -24,11 +10,4 @@
     </div>
 </section>
 
-<section class="portfolio-block call-to-action border-bottom">
-	<div class="container">
-		<div class="d-flex justify-content-center align-items-center content">
-			<h3>Want to write articles for this site?</h3><button class="btn btn-outline-primary btn-lg" type="button">Apply to become a Verified News journalist</button>
-		</div>
-	</div>
-</section>
 <script type="module" src="/forms/article_review.js"></script>
