added about page, updated article to include voting and review form, updated header and footer

--- a/webserver/views/index.ejs
+++ b/webserver/views/index.ejs
@@ -1,13 +1,15 @@
-<section class="portfolio-block">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-lg-4 p-6">
-                <div class="card border-0 p-6 me-6"><img class="card-img" src="/assets/img/template/earth.jpg" alt="Verified news">
+<section class="portfolio-block limited-width">
+    <div class="outer-container">
+        <div class="inner-container">
+            <div class="row">
+                <div class="col-md-6 col-lg-4 p-3">
+                    <div class="card border-0"><img class="card-img" src="/assets/img/template/earth.jpg" alt="Verified news"></div>
                 </div>
-            </div>
-            <div class="col-md-6 col-lg-8 p-6">
-                <h3>Verified News</h3>
-                <h5 class="text-muted fw-light" >Verified News delivers reliable journalism with every article undergoing rigorous fact-checking and peer-review. Articles are stored on a blockchain for transparency and integrity, ensuring an immutable record of our commitment to truth.</h5>
+                <div class="col-md-6 col-lg-8 p-3">
+                    <h3>Verified News</h3>
+                    <h5 class="text-muted fw-light">Verified News delivers reliable journalism with every article undergoing rigorous fact-checking and peer-review. Articles are stored on a blockchain for transparency and integrity, ensuring an immutable record of our commitment to truth.</h5>
+					<h5 class="text-muted fw-light">Our dedication to using cutting-edge technologies like Filecoin and Web3Auth reflects our mission to redefine journalism in the digital age.</h5>
+				</div>
             </div>
         </div>
     </div>
@@ -24,19 +26,23 @@
 					<a href="#"><img class="card-img-top scale-on-hover" src="assets/img/nature/image1.jpg" alt="Card Image"></a>
 					<div class="card-body">
 						<h3><a href="#">Lorem Ipsum</a></h3>
-						<p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
-						<div class="d-flex align-items-center justify-content-between mt-3">
+						<p class="text-muted card-text">A participant at the ETHGlobal Brussels 2024 hackathon managed to steal 2,000,000 ETH from other participants who were too exhausted from coding all night. Authorities are currently tracking down the criminal while participants investigate the best caffeine-based drinks to prevent future incidents.</p>
+						<div class="d-flex align-items-center flex-column flex-lg-row justify-content-between mt-3">
 							<div class="d-flex align-items-center">
 								<img src="assets/img/journalist/john-doe.jpg" alt="Author Image" class="rounded-circle" style="width: 50px; height: 50px;">
-								<p class="mb-0 ms-3 text-muted fs-5 fw-semibold">Peter Andersson</p>
-								<p class="mb-0 ms-3 text-muted fs-5 fw-semibold">journalist score: 92</p>
+								<div class="ms-3">
+									<p class="mb-0 text-muted fs-5 fw-semibold">Peter Andersson</p>
+									<p class="mb-0 text-muted fs-6 fw-semibold">Journalist score: 92</p>
+								</div>
 							</div>
-							<p class="mb-0 text-muted text-end">25/08/2024</p>
-							<p class="mb-0 ms-3 text-muted fs-5 fw-semibold">journalist score: 92</p>
+							<div class="text-muted text-end mt-3 mt-lg-0">
+								<p class="mb-0 fs-6 fw-semibold">Article score: 92</p>
+								<p class="mb-0">Published: 14/07/2024</p>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
+			</div>			
             <div class="col-md-6 col-lg-6">
                 <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="/assets/img/nature/image2.jpg" alt="Card Image"></a>
                     <div class="card-body">
