--- a/webserver/views/header.ejs
+++ b/webserver/views/header.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/assets/css/pikaday.min.css">
     <link rel="stylesheet" href="/assets/css/Ludens-Users---3-Profile.css">
     <link href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.snow.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/assets/css/custom-styles.css" />
+    <link rel="stylesheet" href="/assets/css/custom.css">
 </head>
 
 <body>
@@ -23,10 +23,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/">News</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about-us">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="our-team">Our Team</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about">About Us</a></li>
                     <li class="nav-item"><a class="nav-link active" href="contact">Contact</a></li>
-                    <div class="grid btn-logged-out"><button id="login" class="btn">Login</button></div>
+                    <div class="grid btn-logged-out"><button id="login" class="btn btn-primary">Login</button></div>
                     <div class="dropdown">
                         <button class="btn btn-primary dropdown-toggle btn-logged-in" type="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
