make it prettier

--- a/webserver/views/article_submit.ejs
+++ b/webserver/views/article_submit.ejs
@@ -1,8 +1,6 @@
 <section class="portfolio-block">
     <div class="container">
-        <div class="heading">
-            <h2>Submit Article</h2>
-        </div>
+        <h2 class="text-center">Submit Article</h2>
         <form id="submit-article" class="shadow-lg" data-bs-theme="light" action="/submit-article" method="POST" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="headline">Article headline</label>
