--- a/webserver/views/contact_submit.ejs
+++ b/webserver/views/contact_submit.ejs
@@ -1,8 +1,6 @@
 <section class="portfolio-block">
     <div class="container">
-        <div class="heading">
-            <h2>Contact Us</h2>
-        </div>
+        <h2 class="text-center"><%- title %></h2>
         <form id="submit-form" class="shadow-lg" data-bs-theme="light" action="/contact-submit" method="POST"
             enctype="multipart/form-data">
             <div class="mb-3"><label class="form-label" for="Name">Your Name</label>
