--- a/webserver/views/index.ejs
+++ b/webserver/views/index.ejs
@@ -1,7 +1,7 @@
 <section class="portfolio-block limited-width">
     <div class="outer-container">
         <div class="inner-container">
-            <div class="row">
+            <div class="row shadow">
                 <div class="col-md-6 col-lg-4 p-3">
                     <div class="card border-0"><img class="card-img" src="/assets/img/template/earth.jpg" alt="Verified news"></div>
                 </div>
@@ -17,22 +17,13 @@
 
 <section class="portfolio-block projects-cards">
     <div class="container">
-        <div class="heading">
-            <h3>Top Verified News</h3>
-        </div>
+        <h3 class="text-center">Top Verified News</h3>
         <div class="row" id="article-container">
             <!-- Articles will be inserted here dynamically -->
         </div>
     </div>
 </section>
 
-<section class="portfolio-block call-to-action border-bottom">
-	<div class="container">
-		<div class="d-flex justify-content-center align-items-center content">
-			<h3>Want to write articles for this site?</h3><button class="btn btn-outline-primary btn-lg" type="button">Apply to become a Verified News journalist</button>
-		</div>
-	</div>
-</section>
 <!-- <div class="d-flex align-items-center flex-column flex-lg-row justify-content-between mt-3">
     <div class="d-flex align-items-center">
         <img src="assets/img/journalist/john-doe.jpg" alt="Author Image" class="rounded-circle" style="width: 50px; height: 50px;">
