make styling for index page

--- a/webserver/views/index.ejs
+++ b/webserver/views/index.ejs
@@ -1,4 +1,4 @@
-<section class="portfolio-block">
+<section class="portfolio-block pb-1 pt-3">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-lg-4 p-6">
@@ -12,13 +12,10 @@
         </div>
     </div>
 </section>
-
-<section class="portfolio-block projects-cards">
+<section class="portfolio-block projects-cards py-1">
     <div class="container">
-        <div class="heading">
-            <h3>Top Verified News</h3>
-        </div>
-        <div class="row" id="article-container">
+        <h3 class="text-center my-4">Top Verified News</h3>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3" id="article-container">
             <!-- Articles will be inserted here dynamically -->
         </div>
     </div>
