--- a/webserver/public/assets/css/custom.css
+++ b/webserver/public/assets/css/custom.css
@@ -1,3 +1,12 @@
+.art-card{
+	width: 400px;
+}
+
+.art-card > a > img{
+	width: 400px;
+	height: 300px;
+}
+
 .portfolio-block {
     padding-top: 3rem; /* Reduce top padding */
     padding-bottom: 1rem; /* Reduce bottom padding */
