--- a/webserver/views/review.ejs
+++ b/webserver/views/review.ejs
@@ -10,4 +10,4 @@
     </div>
 </section>
 
-<script type="module" src="/forms/article_review.js"></script>
+<script type="module" src="/forms/review_list.js"></script>
