add responsiveness at index pages

--- a/webserver/views/review.ejs
+++ b/webserver/views/review.ejs
@@ -4,7 +4,7 @@
         <div class="heading">
             <h3>Articles waiting to be evaluated</h3>
         </div>
-        <div class="row" id="article-container">
+        <div class="d-flex flex-wrap justify-content-center" id="article-container">
             <!-- Articles will be inserted here dynamically -->
         </div>
     </div>
