--- a/webserver/views/index.ejs
+++ b/webserver/views/index.ejs
@@ -17,7 +17,7 @@
 <section class="portfolio-block projects-cards py-1">
     <div class="container">
         <h3 class="text-center my-4">Top Verified News</h3>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3" id="article-container">
+        <div class="d-flex flex-wrap justify-content-center" id="article-container">
             <!-- Articles will be inserted here dynamically -->
         </div>
     </div>
