--- a/webserver/views/index.ejs
+++ b/webserver/views/index.ejs
@@ -8,7 +8,7 @@
                 <div class="col-md-6 col-lg-8 p-3">
                     <h3>Verified News</h3>
                     <h5 class="text-muted fw-light">Verified News delivers reliable journalism with every article undergoing rigorous fact-checking and peer-review. Articles are stored on a blockchain for transparency and integrity, ensuring an immutable record of our commitment to truth.</h5>
-					<h5 class="text-muted fw-light">Our dedication to using cutting-edge technologies like Filecoin and Web3Auth reflects our mission to redefine journalism in the digital age.</h5>
+					<h5 class="text-muted fw-light">Our dedication to using cutting-edge technologies like Filecoin, Polygon and Web3Auth reflects our mission to redefine journalism in the digital age.</h5>
 				</div>
             </div>
         </div>
