--- a/webserver/views/header.ejs
+++ b/webserver/views/header.ejs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/assets/css/Ludens-Users---3-Profile.css">
     <link href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.snow.css" rel="stylesheet" />
     <link rel="stylesheet" href="/assets/css/custom.css">
+    <link rel="icon" href="/assets/img/template/logo_200_sq.png" type="image/x-icon">
 </head>
 
 <body>
